native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT uint32_t sogen_dart_abi_version(void);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_create_application(
    const char *application_utf8, const char *emulation_root_utf8,
    sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_create_empty(
    const char *emulation_root_utf8, int32_t backend, sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_create_application_ex(
    const char *application_utf8, const char *emulation_root_utf8,
    int32_t backend, sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_create_empty_with_options(
    const sogen_dart_windows_emulator_options *options,
    sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_create_application_with_options(
    const sogen_dart_windows_application_options *application_options,
    const sogen_dart_windows_emulator_options *emulator_options,
    sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_add_api_hook(
    sogen_dart_app *app, const char *key_utf8, int32_t calling_convention,
    size_t parameter_count, sogen_dart_api_callback callback, void *user_data,
    sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_remove_hook(sogen_dart_app *app, sogen_dart_hook_id hook);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_clear_api_hooks(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_set_callbacks(
    sogen_dart_app *app, const sogen_dart_windows_callbacks *callbacks);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_memory_execution(
    sogen_dart_app *app, int32_t has_address, uint64_t address,
    sogen_dart_execution_callback callback, void *user_data,
    sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_memory_read(
    sogen_dart_app *app, uint64_t address, uint64_t size,
    sogen_dart_memory_callback callback, void *user_data,
    sogen_dart_hook_id *out_hook);