native/include/generated/sogen_dart_generated.h

typedef uint64_t sogen_dart_hook_id;
typedef int32_t sogen_dart_status;
typedef int32_t sogen_dart_api_action;
typedef struct sogen_dart_api_call {
  const char *module_utf8;
  const char *name_utf8;
  uint64_t address;
  uint64_t return_address;
  uint64_t return_value;
} sogen_dart_api_call;
typedef struct sogen_dart_windows_environment_entry {
  const char *name_utf8;
  const char *value_utf8;
} sogen_dart_windows_environment_entry;
typedef struct sogen_dart_windows_path_mapping {
  const char *guest_path_utf8;
  const char *host_path_utf8;
} sogen_dart_windows_path_mapping;
typedef struct sogen_dart_windows_port_mapping {
  uint16_t emulator_port;
  uint16_t host_port;
} sogen_dart_windows_port_mapping;
typedef struct sogen_dart_windows_emulator_options {
  const char *emulation_root_utf8;
  const char *registry_directory_utf8;
  int32_t backend;
  int32_t disable_logging;
  int32_t use_relative_time;
  const sogen_dart_windows_path_mapping *path_mappings;
  size_t path_mapping_count;
  const sogen_dart_windows_port_mapping *port_mappings;
  size_t port_mapping_count;
  uint32_t number_of_processors;
  uint32_t nt_product_type;
} sogen_dart_windows_emulator_options;
typedef struct sogen_dart_windows_application_options {
  const char *application_utf8;
  const char *const *arguments_utf8;
  size_t argument_count;
  const sogen_dart_windows_environment_entry *environment;
  size_t environment_count;
  const char *working_directory_utf8;
} sogen_dart_windows_application_options;
// clang-format off

typedef sogen_dart_api_action (*sogen_dart_api_callback)(void *user_data, sogen_dart_api_call *call, const uint64_t *parameters, size_t parameter_count);
typedef void (*sogen_dart_execution_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t address);
typedef void (*sogen_dart_memory_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t address, const uint8_t *data, size_t length);
typedef void (*sogen_dart_module_callback)(void *user_data, const sogen_dart_mapped_module *module);
typedef void (*sogen_dart_text_callback)(void *user_data, const uint8_t *text_utf8, size_t text_length);
typedef int32_t (*sogen_dart_syscall_callback)(void *user_data, uint32_t syscall_id, const uint8_t *name_utf8, size_t name_length);
typedef void (*sogen_dart_generic_access_callback)(void *user_data, const uint8_t *type_utf8, size_t type_length, const uint8_t *name_utf8, size_t name_length);
typedef void (*sogen_dart_void_callback)(void *user_data);
typedef void (*sogen_dart_address_callback)(void *user_data, uint64_t address);
typedef void (*sogen_dart_memory_protect_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t permission);
typedef void (*sogen_dart_memory_allocate_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t permission, int32_t commit);
typedef int32_t (*sogen_dart_memory_violate_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t operation, int32_t violation_type);
typedef void (*sogen_dart_ioctrl_callback)(void *user_data, const uint8_t *device_name_utf8, size_t device_name_length, uint32_t code);
typedef void (*sogen_dart_thread_create_callback)(void *user_data, uint64_t handle, uint32_t thread_id, uint64_t start_address, uint64_t argument);
typedef void (*sogen_dart_thread_terminated_callback)(void *user_data, uint64_t handle, uint32_t thread_id);
typedef void (*sogen_dart_thread_set_name_callback)(void *user_data, uint32_t thread_id, const uint8_t *name_utf8, size_t name_length);
typedef void (*sogen_dart_thread_switch_callback)(void *user_data, uint32_t current_thread_id, uint32_t new_thread_id);
typedef struct sogen_dart_windows_callbacks {
  void *user_data;
  sogen_dart_module_callback module_load;
  sogen_dart_module_callback module_unload;
  sogen_dart_text_callback stdout_callback;
  sogen_dart_syscall_callback syscall;
  sogen_dart_generic_access_callback generic_access;
  sogen_dart_text_callback generic_activity;
  sogen_dart_text_callback suspicious_activity;
  sogen_dart_void_callback exception;
  sogen_dart_address_callback instruction;
  sogen_dart_memory_protect_event_callback memory_protect;
  sogen_dart_memory_allocate_event_callback memory_allocate;
  sogen_dart_memory_violate_event_callback memory_violate;
  sogen_dart_void_callback rdtsc;
  sogen_dart_void_callback rdtscp;
  sogen_dart_ioctrl_callback ioctrl;
  sogen_dart_text_callback debug_string;
  sogen_dart_thread_create_callback thread_create;
  sogen_dart_thread_terminated_callback thread_terminated;
  sogen_dart_thread_set_name_callback thread_set_name;
  sogen_dart_thread_switch_callback thread_switch;
} sogen_dart_windows_callbacks;