lib/src/ffi/sogen_native_bindings.g.dart

// Generated by package:ffigen. Do not edit.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated private bindings for the sogen_dart C ABI.
class SogenNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SogenNativeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SogenNativeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<T> lookup<T extends ffi.NativeType>(String symbolName) =>
      _lookup<T>(symbolName);

  int sogen_dart_abi_version() {
    return _sogen_dart_abi_version();
  }

  late final _sogen_dart_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'sogen_dart_abi_version',
      );
  late final _sogen_dart_abi_version = _sogen_dart_abi_versionPtr
      .asFunction<int Function()>();

  int sogen_dart_windows_create_application(
    ffi.Pointer<ffi.Char> application_utf8,
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_windows_create_application(
      application_utf8,
      emulation_root_utf8,
      out_app,
    );
  }

  late final _sogen_dart_windows_create_applicationPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_windows_create_application');
  late final _sogen_dart_windows_create_application =
      _sogen_dart_windows_create_applicationPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_windows_create_empty(
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    int backend,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_windows_create_empty(
      emulation_root_utf8,
      backend,
      out_app,
    );
  }

  late final _sogen_dart_windows_create_emptyPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_windows_create_empty');
  late final _sogen_dart_windows_create_empty =
      _sogen_dart_windows_create_emptyPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_windows_create_application_ex(
    ffi.Pointer<ffi.Char> application_utf8,
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    int backend,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_windows_create_application_ex(
      application_utf8,
      emulation_root_utf8,
      backend,
      out_app,
    );
  }

  late final _sogen_dart_windows_create_application_exPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_windows_create_application_ex');
  late final _sogen_dart_windows_create_application_ex =
      _sogen_dart_windows_create_application_exPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_windows_create_empty_with_options(
    ffi.Pointer<sogen_dart_windows_emulator_options> options,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_windows_create_empty_with_options(options, out_app);
  }

  late final _sogen_dart_windows_create_empty_with_optionsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_windows_emulator_options>,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_windows_create_empty_with_options');
  late final _sogen_dart_windows_create_empty_with_options =
      _sogen_dart_windows_create_empty_with_optionsPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_windows_emulator_options>,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_windows_create_application_with_options(
    ffi.Pointer<sogen_dart_windows_application_options> application_options,
    ffi.Pointer<sogen_dart_windows_emulator_options> emulator_options,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_windows_create_application_with_options(
      application_options,
      emulator_options,
      out_app,
    );
  }

  late final _sogen_dart_windows_create_application_with_optionsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_windows_application_options>,
            ffi.Pointer<sogen_dart_windows_emulator_options>,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_windows_create_application_with_options');
  late final _sogen_dart_windows_create_application_with_options =
      _sogen_dart_windows_create_application_with_optionsPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_windows_application_options>,
              ffi.Pointer<sogen_dart_windows_emulator_options>,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_windows_add_api_hook(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Char> key_utf8,
    int calling_convention,
    int parameter_count,
    sogen_dart_api_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_add_api_hook(
      app,
      key_utf8,
      calling_convention,
      parameter_count,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_add_api_hookPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Size,
            sogen_dart_api_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_add_api_hook');
  late final _sogen_dart_windows_add_api_hook =
      _sogen_dart_windows_add_api_hookPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              sogen_dart_api_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_remove_hook(
    ffi.Pointer<sogen_dart_app> app,
    int hook,
  ) {
    return _sogen_dart_windows_remove_hook(app, hook);
  }

  late final _sogen_dart_windows_remove_hookPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            sogen_dart_hook_id,
          )
        >
      >('sogen_dart_windows_remove_hook');
  late final _sogen_dart_windows_remove_hook =
      _sogen_dart_windows_remove_hookPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_windows_clear_api_hooks(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_clear_api_hooks(app);
  }

  late final _sogen_dart_windows_clear_api_hooksPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_clear_api_hooks');
  late final _sogen_dart_windows_clear_api_hooks =
      _sogen_dart_windows_clear_api_hooksPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_windows_set_callbacks(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_windows_callbacks> callbacks,
  ) {
    return _sogen_dart_windows_set_callbacks(app, callbacks);
  }

  late final _sogen_dart_windows_set_callbacksPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_windows_callbacks>,
          )
        >
      >('sogen_dart_windows_set_callbacks');
  late final _sogen_dart_windows_set_callbacks =
      _sogen_dart_windows_set_callbacksPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_windows_callbacks>,
            )
          >();

  int sogen_dart_windows_hook_memory_execution(
    ffi.Pointer<sogen_dart_app> app,
    int has_address,
    int address,
    sogen_dart_execution_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_memory_execution(
      app,
      has_address,
      address,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_memory_executionPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            ffi.Uint64,
            sogen_dart_execution_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_memory_execution');
  late final _sogen_dart_windows_hook_memory_execution =
      _sogen_dart_windows_hook_memory_executionPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              sogen_dart_execution_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_hook_memory_read(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    sogen_dart_memory_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_memory_read(
      app,
      address,
      size,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_memory_readPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Uint64,
            sogen_dart_memory_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_memory_read');
  late final _sogen_dart_windows_hook_memory_read =
      _sogen_dart_windows_hook_memory_readPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              sogen_dart_memory_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();
